Remove deceiving Xlog line